[tool.poetry]
name = "explore-the-stacks"
version = "0.1.0"
description = ""
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyramid = "^2.0"
SQLAlchemy = "^1.4.32"
pyramid-tm = "^2.5"
"zope.sqlalchemy" = "^1.6"
waitress = "^2.1.1"
decorator = "^5.1.1"
mimeparse = "^0.1.3"
FormEncode = "^2.0.1"
elasticsearch = "^8.1.1"
lxml = "^4.8.0"
kajiki = "^0.9.0"
asset = "^0.6.13"
psycopg2 = "^2.9.3"
gensim = "^4.1.2"
spacy = "^3.2.3"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
